Use ARIA rather than CSS to control un/sticky title visibility to prevent both strings being output (fixes #17)

--- a/scss/frontend.scss
+++ b/scss/frontend.scss
@@ -74,22 +74,6 @@
         margin: var(--wpdtrt-anchorlinks-margin-title); // align with top of gallery viewer (assumes there is a gallery viewer..
     }
 
-    &__title-sticky {
-        display: none;
-
-        #{$block}--sticky & {
-            display: block;
-        }
-    }
-
-    &__title-unsticky {
-        display: block;
-
-        #{$block}--sticky & {
-            display: none;
-        }
-    }
-
     @include media('>=laptop') {
         position: sticky;
         top: var(--wpdtrt-anchorlinks-position-top);
